# polyvox

./: .gitattributes  CHANGELOG.txt  CMakeLists.txt  CREDITS.txt  CTestConfig.cmake  INSTALL.txt  LICENSE.TXT  Packaging.cmake  README.rst  TODO.txt
PolyVoxCore/: CMakeLists.txt
PolyVoxCore/include/: Block.h  Block.inl  BlockVolume.h  BlockVolume.inl  BlockVolumeIterator.h  BlockVolumeIterator.inl  Constants.h  GradientEstimators.h  GradientEstimators.inl  IndexedSurfacePatch.h  LinearVolume.h  LinearVolume.inl  PolyVoxCStdInt.h  PolyVoxForwardDeclarations.h  SurfaceAdjusters.h  SurfaceExtractors.h  SurfaceExtractorsDecimated.h  SurfaceVertex.h  Utility.h  Vector.h  Vector.inl  VolumeChangeTracker.h  VoxelFilters.h
PolyVoxCore/source/: GradientEstimators.cpp  IndexedSurfacePatch.cpp  Region.cpp  SurfaceAdjusters.cpp  SurfaceExtractors.cpp  SurfaceExtractorsDecimated.cpp  SurfaceVertex.cpp  Utility.cpp  VolumeChangeTracker.cpp  VoxelFilters.cpp
PolyVoxUtil/: CMakeLists.txt
PolyVoxUtil/include/: VolumeChangeTracker.h
PolyVoxUtil/source/: VolumeChangeTracker.cpp
bindings/: CMakeLists.txt  PolyVoxCore.i
cmake/Modules/: CheckCXX11Features.cmake
documentation/: CMakeLists.txt  ErrorHandling.rst  FAQ.blah  FAQ.rst  LevelOfDetail.rst  LevelOfDetail.txt  Lighting.rst  ModifyingTerrain.rst  Prerequisites.rst  TextureMapping.rst  Threading.rst  Volumes.rst  changelog.rst  conf.in.py  conf.py  faq.txt  index.rst  install.rst  make.bat  principles.rst  python-bindings.rst  texturemapping.txt  tutorial1.rst
examples/: CMakeLists.txt
examples/Basic/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp
examples/DecodeOnGPU/: CMakeLists.txt  decode.vert  main.cpp
examples/OpenGL/: CMakeLists.txt  OpenGLImmediateModeSupport.cpp  OpenGLImmediateModeSupport.h  OpenGLSupport.cpp  OpenGLSupport.h  OpenGLVertexBufferObjectSupport.cpp  OpenGLVertexBufferObjectSupport.h  OpenGLWidget.cpp  OpenGLWidget.h  Shapes.cpp  Shapes.h  main.cpp  openglexample.vert
examples/OpenGL/glew/: glew.cpp  glxew.h
examples/Paging/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  Perlin.cpp  Perlin.h  main.cpp
examples/Python/: CMakeLists.txt  PythonExample.py
examples/SmoothLOD/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp
examples/common/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidget.inl  PolyVoxExample.cpp  PolyVoxExample.h  example.frag  example.vert
include/: AbstractSurfacePatch.h  Block.h  Block.inl  BlockVolume.h  BlockVolume.inl  BlockVolumeIterator.h  BlockVolumeIterator.inl  CMakeLists.txt  Constants.h  Enums.h  ForwardDeclarations.h  GradientEstimators.h  GradientEstimators.inl  HalfEdgeSurfacePatch.h  IndexedSurfacePatch.h  IntegralVector3.h  LinearVolume.h  LinearVolume.inl  MarchingCubesTables.h  MaterialMap.h  MaterialMapManager.h  MaterialMapSerializer.h  PolyVoxForwardDeclarations.h  PolyVoxSceneManager.h  Region.h  RegionGeometry.h  Surface.h  SurfaceEdge.h  SurfaceExtractors.h  SurfacePatch.h  SurfacePatchRenderable.h  SurfaceTriangle.h  SurfaceTypes.h  SurfaceVertex.h  Triangle.h  TypeDef.h  Utility.h  Vector.h  Vector.hpp  Vector.inl  (+9 more)
include/PolyVox/: AStarPathfinder.h  AStarPathfinder.inl  AmbientOcclusionCalculator.h  AmbientOcclusionCalculator.inl  Array.h  BaseVolume.h  BaseVolume.inl  BaseVolumeSampler.inl  CubicSurfaceExtractor.h  CubicSurfaceExtractor.inl  DefaultIsQuadNeeded.h  DefaultMarchingCubesController.h  Density.h  Exceptions.h  FilePager.h  GradientEstimators.h  Interpolation.h  IteratorController.h  IteratorController.inl  LargeVolume.h  Logging.h  LowPassFilter.h  LowPassFilter.inl  MarchingCubesSurfaceExtractor.h  MarchingCubesSurfaceExtractor.inl  Material.h  MaterialDensityPair.h  Mesh.h  Mesh.inl  PagedVolume.h  PagedVolume.inl  PagedVolumeChunk.inl  PagedVolumeSampler.inl  Picking.h  Picking.inl  PolyVoxForwardDeclarations.h  RawVolume.h  RawVolume.inl  RawVolumeSampler.inl  Raycast.h  (+10 more)
include/PolyVox/Impl/: AStarPathfinderImpl.h  Assertions.h  Config.h  ErrorHandling.h  ExceptionsImpl.h  IteratorController.h  Logging.h  LoggingImpl.h  MarchingCubesTables.h  Morton.h  PlatformDefinitions.h  RandomUnitVectors.h  RandomVectors.h  Timer.h  TypeDef.h  Utility.h
include/PolyVoxCore/: AmbientOcclusionCalculator.h  CMakeLists.txt  CubicSurfaceExtractor.h  CubicSurfaceExtractor.inl  DefaultMarchingCubesController.h  Density.h  FilePager.h  GradientEstimators.h  GradientEstimators.inl  Material.h  MaterialDensityPair.h  Vector.inl  Vertex.h  VolumeResampler.h
include/PolyVoxCore/Impl/: RandomUnitVectors.h
include/PolyVoxCore/include/PolyVoxCore/: Array.h  BaseVolume.inl  DefaultIsQuadNeeded.h  MarchingCubesSurfaceExtractor.inl  PagedVolumeChunk.inl  RawVolume.h  RawVolumeSampler.inl  Vector.h  VolumeResampler.inl
include/PolyVoxCore/include/PolyVoxCore/Impl/: ErrorHandling.h  MarchingCubesTables.h  TypeDef.h  Utility.h
materials/programs/: ColourMap2DFragmentProgram.cg  ColourMap2DVertexProgram.cg
media/models/: Cone.mesh  (+2 more)
source/: AbstractSurfacePatch.cpp  Block.cpp  HalfEdgeSurfacePatch.cpp  IndexedSurfacePatch.cpp  MarchingCubesTables.cpp  MaterialMap.cpp  MaterialMapManager.cpp  MaterialMapSerializer.cpp  PolyVoxSceneManager.cpp  Region.cpp  RegionGeometry.cpp  Surface.cpp  SurfaceEdge.cpp  SurfaceExtractors.cpp  SurfacePatch.cpp  SurfacePatchRenderable.cpp  SurfaceTriangle.cpp  SurfaceVertex.cpp  Utility.cpp  Volume.cpp  VolumeChangeTracker.cpp  VolumeIterator.cpp  VolumeManager.cpp  VolumeResource.cpp  VolumeSerializer.cpp
tests/: CMakeLists.txt  TestAStarPathfinder.cpp  TestAStarPathfinder.h  TestAmbientOcclusionGenerator.cpp  TestAmbientOcclusionGenerator.h  TestArray.cpp  TestArray.h  TestCubicSurfaceExtractor.cpp  TestCubicSurfaceExtractor.h  TestLowPassFilter.cpp  TestPicking.cpp  TestPicking.h  TestRaycast.cpp  TestRaycast.py  TestRegion.cpp  TestSurfaceExtractor.cpp  TestSurfaceExtractor.cs  TestSurfaceExtractor.h  TestSurfaceExtractor.py  TestVolumeSubclass.cpp  TestVoxels.cpp  TestVoxels.h  checksize.cpp  testmaterial.cpp  testvector.cpp  testvector.h  testvolume.cpp  testvolume.h
(+34 files in other folders)
