find_package(Qt5OpenGL 5.2)

set_package_properties(Qt5OpenGL PROPERTIES DESCRIPTION "C++ framework" URL http://qt-project.org)
set_package_properties(Qt5OpenGL PROPERTIES TYPE RECOMMENDED PURPOSE "Building the examples")

if(Qt5OpenGL_FOUND)
	SET(BUILD_EXAMPLES ON PARENT_SCOPE)
	ADD_SUBDIRECTORY(Basic)
	ADD_SUBDIRECTORY(Paging)
	ADD_SUBDIRECTORY(OpenGL)
	ADD_SUBDIRECTORY(SmoothLOD)
	ADD_SUBDIRECTORY(DecodeOnGPU)
	ADD_SUBDIRECTORY(Python)
else()
	SET(BUILD_EXAMPLES OFF PARENT_SCOPE)
endif()
